# social_chatbot

./: .env  .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  crawled.md  docker-compose.yml  projectdetails.md  pyproject.toml
alembic/: README  env.py
alembic/versions/: 001_saas_billing.py  002_crawler_v2.py  003_product_history.py  004_fts_bm25_index.py
app/: __init__.py  main.py
app/api/: __init__.py  admin.py  agents.py  analytics.py  auth.py  billing.py  conversations.py  governance.py  hallucination.py  health.py  knowledge.py  organizations.py  plans.py  products.py  quotas.py  risk.py  subscriptions.py  uploads.py  usage.py  voice.py  webhooks.py
app/billing/: __init__.py  analytics.py  metering.py  service.py  webhook_handler.py
app/cache/: __init__.py  cache_keys.py  decorators.py  manager.py  response_cache.py  semantic_cache.py  session_cache.py  token_cache.py
app/core/: config.py  constants.py  database.py  dependencies.py  logging.py  middleware_config.py  permissions.py  rate_limiter.py  redis_client.py  secrets.py  security.py
app/crawler/: __init__.py  completeness_engine.py  content_cleaner.py  engine.py  entity_graph.py  entity_model.py  extraction_validator.py  extractor.py  scraper.py  (+14 more)
infrastructure/: docker-compose.yml
requirements/: ai-heavy.txt  base.txt  dev.txt  prod.txt  test.txt
scripts/: ingest_documents.py  migrate.sh  seed_data.py  setup.sh  start.sh
tests/: conftest.py  test_auth.py  test_cache.py  test_governance.py  test_hallucination.py  test_orchestrator.py  test_rag.py  test_risk.py  test_services.py
(+233 files in other folders)
